[gd_scene load_steps=9 format=2]

[ext_resource path="res://story/photo_2022-12-07_17-35-38.jpg" type="Texture" id=1]
[ext_resource path="res://Coin+button arrow/shadedDark24 - Copy.png" type="Texture" id=2]
[ext_resource path="res://Coin+button arrow/shadedLight24.png" type="Texture" id=3]
[ext_resource path="res://Coin+button arrow/shadedLight25.png" type="Texture" id=4]
[ext_resource path="res://Coin+button arrow/shadedDark25 - Copy.png" type="Texture" id=5]
[ext_resource path="res://Music/chime-sound-7143.mp3" type="AudioStream" id=6]
[ext_resource path="res://src/levels/after2.gd" type="Script" id=7]
[ext_resource path="res://src/levels/bg_scene.tscn" type="PackedScene" id=8]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 513.5, 302 )
scale = Vector2( 0.797656, 0.836111 )
texture = ExtResource( 1 )

[node name="chime" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="test" type="TextureButton" parent="."]
margin_left = 959.0
margin_top = 17.0
margin_right = 1004.0
margin_bottom = 63.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true

[node name="prev" type="TextureButton" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 61.0
margin_bottom = 59.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true

[node name="Background music" parent="." instance=ExtResource( 8 )]

[connection signal="mouse_entered" from="test" to="." method="_on_test_mouse_entered"]
[connection signal="mouse_exited" from="test" to="." method="_on_test_mouse_exited"]
[connection signal="pressed" from="test" to="." method="_on_test_pressed"]
[connection signal="mouse_entered" from="prev" to="." method="_on_prev_mouse_entered"]
[connection signal="mouse_exited" from="prev" to="." method="_on_prev_mouse_exited"]
[connection signal="pressed" from="prev" to="." method="_on_prev_pressed"]
